--- a/backend/makefile
+++ b/backend/makefile
@@ -1,11 +1,11 @@
 
-build: SQLServerDemo.class
+build: Pokemon_sql_server.class
 
-SQLServerDemo.class: SQLServerDemo.java
-	javac SQLServerDemo.java
+Pokemon_sql_server.class: Pokemon_sql_server.java
+	javac Pokemon_sql_server.java
 
-run: SQLServerDemo.class
-	java -cp .:mssql-jdbc-11.2.0.jre11.jar SQLServerDemo
+run: Pokemon_sql_server.class
+	java -cp .:mssql-jdbc-11.2.0.jre11.jar Pokemon_sql_server
 
 clean:
-	rm SQLServerDemo.class
+	rm Pokemon_sql_server.class
